# eth-owned

python/: .gitignore  CHANGELOG  Makefile  requirements.txt  setup.cfg
python/eth_owned/: __init__.py  owned.py  void.py
python/eth_owned/data/: VoidOwner.json
python/eth_owned/runnable/: owner.py  void.py  void_deploy.py
python/eth_owner/: __init__.py  owned.py
python/eth_void_owner/: __init__.py
python/eth_void_owner/data/: VoidOwner.json
python/tests/: test_basic.py  test_owned.py  test_void.py
python/tests/testdata/: Owned.sol
solidity/: Makefile  Owned.sol  OwnedSimple.sol  VoidOwner.sol
