[metadata]
name = eth-owned
version = 0.0.1a2
description = EIP 172 interface and tools
author = Louis Holbrook
author_email = dev@holbrook.no
url = https://gitlab.com/nolash/eth-owned
keywords =
	ethereum
classifiers =
	Programming Language :: Python :: 3
	Operating System :: OS Independent
	Development Status :: 3 - Alpha
	Environment :: No Input/Output (Daemon)
	Intended Audience :: Developers
	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
	Topic :: Internet
	Topic :: Development :: Libraries
	#Topic :: Blockchain :: EVM
license = GPL3
licence_files =
	LICENSE.txt

[options]
include_package_data = True
python_requires = >= 3.6
packages = 
	eth_owned
	eth_owned.data

[options.extras_require]
testing = 
	pytest==6.0.1
	eth-tester==0.5.0b2
	py-evm==0.3.0a20

[options.package_data]
* =
 	**/data/*.json
 	**/data/*.bin

[options.entry_points]
console_scripts =
	eth-owner-void-deploy = eth_owned.runnable.void_deploy:main
